[package]
name = "dir-walkin"
version = "0.1.0"
edition = "2021"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
description = "Made to fit my own needs. Not intended to be used in production."
keywords = ["recursive", "directory", "walk", "walking"]
categories = ["filesystem"]
repository = "https://github.com/Its-its/Directory-Walkin"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24", features = ["full"] }
futures = "0.3"

thiserror = "1.0"